--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ABBONOVA</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -12,14 +12,14 @@
 
 <header class="header">
     <div class="logo-title-wrapper">
-      <img src="assets/logo.png" alt="ABBONOVA Logo" class="logo" />
+      <img src="assets/images/logo.png" alt="ABBONOVA Logo" class="logo" />
       <h1 class="title">ABBONOVA IT Services and General Trading</h1>
     </div>
   </header>
 
   <!-- Background Video -->
 <video autoplay muted loop playsinline id="bg-video">
-  <source src="assets/bg-video.mp4" type="video/mp4" />
+  <source src="assets/media/bg-video.mp4" type="video/mp4" />
   Your browser does not support HTML5 video.
 </video>
 <div class="overlay"></div>
@@ -29,14 +29,14 @@
     <button class="glow-button" onclick="handleClick('trading')">General Trading</button>
   </main>
 
-  <script src="script.js"></script>
+  <script src="assets/js/script.js"></script>
 
  <!-- Footer -->
 <footer class="footer">
   <div class="footer-content">
     <!-- Logo Section -->
     <div class="footer-logo">
-      <img src="assets/logo.png" alt="ABBONOVA Logo" />
+      <img src="assets/images/logo.png" alt="ABBONOVA Logo" />
     </div>
 
     <!-- About Us -->
