--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>ABBONOVA</title>
-  <link rel="stylesheet" href="assets/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/Styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -19,7 +19,7 @@
 
   <!-- Background Video -->
 <video autoplay muted loop playsinline id="bg-video">
-  <source src="assets/media/bg-video.mp4" type="video/mp4" />
+  <source src="assets/Media/bg-video.mp4" type="video/mp4" />
   Your browser does not support HTML5 video.
 </video>
 <div class="overlay"></div>
@@ -29,7 +29,7 @@
     <button class="glow-button" onclick="handleClick('trading')">General Trading</button>
   </main>
 
-  <script src="assets/js/script.js"></script>
+  <script src="assets/js/Script.js"></script>
 
  <!-- Footer -->
 <footer class="footer">
