--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <!-- Background Video -->
 <video autoplay muted loop playsinline id="bg-video">
-  <source src="assets/Media/bg-video.mp4" type="video/mp4" />
+  <source src="assets/videos/bg-video.mp4" type="video/mp4" />
   Your browser does not support HTML5 video.
 </video>
 <div class="overlay"></div>
