--- a/general-trading.html
+++ b/general-trading.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IT Services - Under Construction</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="assets/css/Styles.css" />
   <style>
     .construction {
       height: 100vh;
@@ -32,7 +32,7 @@
 </head>
 <body>
   <div class="construction">
-    <img src="assets/logo.png" alt="ABBONOVA Logo" style="width: 80px; margin-bottom: 20px;" />
+    <img src="assets//images/logo.png" alt="ABBONOVA Logo" style="width: 80px; margin-bottom: 20px;" />
     <h1>General Trading Page is Under Construction</h1>
     <p>We are working hard to bring you something amazing. Stay tuned!</p>
   </div>
