--- a/it-services.html
+++ b/it-services.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>IT Services - Under Construction</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="assets/css/Styles.css" />
   <style>
     .construction {
       height: 100vh;
