--- a/general-trading.html
+++ b/general-trading.html
@@ -32,7 +32,7 @@
 </head>
 <body>
   <div class="construction">
-    <img src="assets//images/logo.png" alt="ABBONOVA Logo" style="width: 80px; margin-bottom: 20px;" />
+    <img src="assets/images/logo.png" alt="ABBONOVA Logo" style="width: 80px; margin-bottom: 20px;" />
     <h1>General Trading Page is Under Construction</h1>
     <p>We are working hard to bring you something amazing. Stay tuned!</p>
   </div>
