--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 <header class="header">
     <div class="logo-title-wrapper">
-      <img src="assets/images/logo.png" alt="ABBONOVA Logo" class="logo" />
+      <a href="index.html">
+        <img src="assets/images/logo.png" alt="ABBONOVA Logo" class="logo" />
+      </a>
       <h1 class="title">ABBONOVA IT Services and General Trading</h1>
     </div>
   </header>
