--- a/it-services.html
+++ b/it-services.html
@@ -32,7 +32,7 @@
 <body>
  <div class="construction">
   <a href="index.html">
-    <img src="assets/logo.png" alt="ABBONOVA Logo" class="logo" />
+    <img src="assets/images/logo.png" alt="ABBONOVA Logo" class="logo" />
   </a>
   <h1>IT Services Page is Under Construction</h1>
   <p>We are working hard to bring you something amazing. Stay tuned!</p>
