--- a/general-trading.html
+++ b/general-trading.html
@@ -31,10 +31,14 @@
   </style>
 </head>
 <body>
-  <div class="construction">
-    <img src="assets/images/logo.png" alt="ABBONOVA Logo" style="width: 80px; margin-bottom: 20px;" />
-    <h1>General Trading Page is Under Construction</h1>
-    <p>We are working hard to bring you something amazing. Stay tuned!</p>
-  </div>
+ <div class="construction">
+  <a href="index.html">
+    <img src="assets/images/logo.png" alt="ABBONOVA Logo" class="logo" />
+  </a>
+  <h1>General Trading Page is Under Construction</h1>
+  <p>We are working hard to bring you something amazing. Stay tuned!</p>
+
+  <a href="index.html" class="back-home-button">← Back to Home</a>
+</div>
 </body>
 </html>
