--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="icon" type="image/png" href="assets/images/favicon.png">
   <link rel="stylesheet" href="assets/css/Styles.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <!-- Open Graph Meta Tags -->
+<meta property="og:site_name" content="ABBONOVA IT Services and General Traders">
+<meta property="og:url" content="https://www.abbonova.com">
+<meta property="og:image" content="https://www.abbonova.com/assets/images/logo.jpg"> <!-- replace with actual path -->
+<meta property="og:title" content="ABBONOVA | IT Services and General Trading">
+<meta property="og:description" content="Delivering innovative IT solutions and trusted trading services to empower businesses.">
+<meta property="og:type" content="website">
+
 </head>
 <body>
 
